feat(api,web): head+tail log render — closes #18
Pre-fix the run detail page returned only the TAIL of each job's
log (default 200 lines, capped at 2000). A 23k-line build showed
only lines ~22.8k–23k. Everything before — Gradle daemon startup,
Nexus dependency resolution, JDK toolchain selection, classpath
assembly — was invisible from the UI; kubectl logs was the only
recourse for diagnosing bootstrap-time errors. The Card pipeline
hit this on every failed run.

After: API accepts `?head=N` alongside `?logs=N`. Both capped at
2000. Response carries logs_head, logs (tail), logs_omitted per
job. UI renders head, `· · · X lines omitted · · ·` divider,
then tail — operator sees both the startup (where dep errors
live) AND the tail (where the failure stack lives).

UI defaults to ?logs=200&head=500 so no operator config needed.

Implementation:
- HeadLogLinesByJob (first N by seq) + CountLogLinesByJob SQL.
- LogWindow struct + Store.GetRunDetailWithLogs API; legacy
  GetRunDetail kept (delegates to the new one with Head=0).
- Archive-aware: archivedHead mirrors archivedTail and returns
  (lines, total) so cold logs render the same head+omitted shape.
- Cursor-driven polling (SSE delta path) skips head fetch — head
  doesn't move; no point re-shipping it.
- Dedupe when head+tail overlap: short jobs trim head against
  tail's seq set; operator sees each line once, omitted=0.

UI:
- LogViewer accepts head + omitted props. When omitted>0 it
  renders a dashed divider between head and tail. Backward-compat:
  head undefined / omitted=0 = pure tail render (existing shape).
- Run detail counters show "X of Y" (rendered / total).

Tests:
- TestGetRunDetailWithLogs_HeadAndTailRendersStartAndEnd —
  100-line job, head=5+tail=5 → 90 omitted, correct seqs.
- TestGetRunDetailWithLogs_HeadTailOverlapDedupes — head trimmed
  when total fits in head+tail.
- TestGetRunDetailWithLogs_CursorSkipsHead — cursor mode skips
  head + omitted.

Cuts v0.14.7.

Co-Authored-By: Claude Opus 4.7 <n